*SVN*

* Don't classify the has_one class when eager loading, it is already singular. Add tests. (closes #4117) [jonathan@bluewire.net.nz]

* Quit ignoring default :include options in has_many :through calls [Mark James]

* Allow has_many :through associations to find the source association by setting a custom class (closes #4307) [jonathan@bluewire.net.nz]

* Eager Loading support added for has_many :through => :has_many associations (see below).  [Rick Olson]

* Allow has_many :through to work on has_many associations (closes #3864) [sco@scottraymond.net]  Example:

    class Firm < ActiveRecord::Base
      has_many :clients
      has_many :invoices, :through => :clients
    end
  
    class Client < ActiveRecord::Base
      belongs_to :firm
      has_many   :invoices
    end
  
    class Invoice < ActiveRecord::Base
      belongs_to :client
    end

* Raise error when trying to select many polymorphic objects with has_many :through or :include (closes #4226) [josh@hasmanythrough.com]

* Fixed has_many :through to include :conditions set on the :through association. closes #4020 [jonathan@bluewire.net.nz]

* Fix that has_many :through honors the foreign key set by the belongs_to association in the join model (closes #4259) [andylien@gmail.com / Rick]

* SQL Server adapter gets some love #4298 [rtomayko@gmail.com]

* Added OpenBase database adapter that builds on top of the http://www.spice-of-life.net/ruby-openbase/ driver. All functionality except LIMIT/OFFSET is supported #3528 [derrickspell@cdmplus.com]

* Rework table aliasing to account for truncated table aliases.  Add smarter table aliasing when doing eager loading of STI associations. This allows you to use the association name in the order/where clause. [Jonathan Viney / Rick Olson] #4108 Example (SpecialComment is using STI):

    Author.find(:all, :include => { :posts => :special_comments }, :order => 'special_comments.body')
